syntax = "proto3";

/*
引用库 同级目录文件 import "XXX.proto"; 
类型proto>>C# 
uint32:uint 
sint32:int   含有负值时效率比int32高
bytes:byte[] 字节数组
集合关键字 repeated
*/

package FGUFW.Core;

message PB_Frame
{
    int32 Index=1;
    int32 PlaceIndex=2;
    repeated uint32 Cmds=3;
    repeated bytes MsgDatas=4;
}

message PB_PlayerInfo
{
    string Nickname=1;
    string ID=2;
}

message PB_Player
{
    PB_PlayerInfo PlayerInfo=1;
    int32 PlaceIndex = 2;
}

message PB_GameStart
{
    int32 PlaceIndex = 1;
}

message PB_GameOver
{
    int32 PlaceIndex = 1;
}

//玩家准备 所有玩家准备才会开始
message PB_GameReady
{
    int32 PlaceIndex = 1;
}


message PB_OnlineGame
{
    int64 GamePlayID = 1; //房间id
    int32 GameID = 2;     //游戏id
    repeated PB_Player Players = 3;
    string IP = 4;
    int32 Port = 5;
}

message PB_JoinGame
{
    PB_PlayerInfo PlayerInfo = 1;
}

message PB_LeaveGame
{
    PB_PlayerInfo PlayerInfo = 1;
}